crates/toml_edit/tests/snapshots/invalid/table/trailing-dot.stderr
TOML parse error at line 1, column 4
  |
1 | [a.]
  |    ^
unquoted keys cannot be empty, expected letters, numbers, `-`, `_`
